<resources>
    <string name="app_name">SonrisaPlantJv</string>
    <string name="create_account">Create Your Account</string>
    <string name="login_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="login">Login</string>
    <!-- validator login -->
    <string name="emptyemail">Email must input.</string>
    <string name="emptypassword">Password must input.</string>
    <string name="emailformat">Email must be name@domainname.</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">or continue with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="upload_image">Upload Image</string>
    <string name="continue_fill">Continue</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="add_a_pin">Add a PIN number to make your account more secure</string>
    <string name="create_new_pin">Create New PIN</string>
    <string name="loading">Loading...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>