<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activity.LoginActivity">

    <LinearLayout
        android:paddingStart="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <include layout="@layout/toolbar"
            android:id="@+id/tool_bar"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:src="@drawable/logo_login" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:layout_marginBottom="24dp"
            android:text="@string/login_account"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_corner"
            android:hint="@string/email"
            android:id="@+id/edt_email_login"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableEnd="@drawable/remove_red_eye_24"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:id="@+id/edt_password_login"
            android:background="@drawable/round_corner"
            android:padding="16dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:id="@+id/cb_remember_me"
                android:textSize="16sp"
                android:shadowColor="@color/green_app_light_2"
                android:textColorHighlight="@color/green_app_light_2"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_the_password"
                android:layout_alignParentEnd="true"
                android:padding="12dp"
                android:textSize="16sp"
                android:textColor="@color/green_app_light"/>

        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:id="@+id/btn_login"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/round_corner_button"
            app:backgroundTint="@color/green_app_light"
            />

    </LinearLayout>

</RelativeLayout>